k8s/dummy-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-auth-lambda-dummy
  namespace: default
  labels:
    app: kong-auth-lambda-dummy
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kong-auth-lambda-dummy
  namespace: default
subsets:
  - addresses:
      - ip: 192.0.2.10
    ports:
      - name: http
        port: 80
        protocol: TCP
