k8s/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oficina-api
  namespace: default
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: oficina-api-service
                port:
                  number: 80
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: oficina-api-service
                port:
                  number: 80
