k8s/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oficina-auth
  namespace: default
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/methods: "POST"
    konghq.com/plugins: auth-aws-lambda
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: kong-auth-lambda-dummy
                port:
                  number: 80
